--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,15 @@
-.App {
-  text-align: center;
+@media screen and (min-width: 48em) {
+	.container .app-header {
+  	padding-left: 12px;
+  }
+
+  .container .page-title {
+  	padding-left: 12px;
+  }
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.app-header .app-title span {
+  opacity: 0.8;
+	color: red;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
