renamed component filename to follow convention. restricted max width to 1024 and center aligned content. added basic css to details page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+.container {
+  max-width: 80em;
+  margin: auto;
+}
+
 @media screen and (min-width: 48em) {
 	.container .app-header {
-  	padding-left: 12px;
+  	text-align: center;
   }
 
   .container .page-title {
