--- a/src/product/details/DetailsComponent.css
+++ b/src/product/details/DetailsComponent.css
@@ -1,14 +1,26 @@
 .all-products-link {
 	display: block;
 	padding-bottom: 10px;
+	text-align: center;
 }
 
 .product-detail-container {
-	display: flex;
+	margin-top: 50px;
+}
+
+@media screen and (max-width: 35.5em) {
+	.product-detail-container {
+		margin-top: 20px;
+	}
+}
+
+.product-detail-container .product-image {
+	text-align: center;
+	cursor: pointer;
 }
 
 .product-detail-container .product-detail {
-	margin-left: 10px;
+	padding: 0 10px;
 }
 
 .product-detail-container .product-detail .product-price {
@@ -24,3 +36,85 @@
 	color: red;
 	opacity: 0.8;
 }
+
+.slider-control-bottomcenter {
+  background: rgba(192, 192, 192, 0.7);
+  width: 100%;
+  text-align: center;
+}
+
+@media screen and (max-width: 35.5em) {
+	.images-overlay img {
+		width: 30em;
+		height: 30em;
+	}
+
+	.slider-control-bottomcenter {
+		display: none;
+  }
+}
+
+@media screen and (min-width: 35.5em) and (max-width: 48em) and (orientation: portrait) {
+	.images-overlay img {
+		width: 35.5em;
+		height: 35.5em;
+	}
+}
+
+@media screen and (min-width: 35.5em) and (max-width: 48em) and (orientation: landscape) {
+	.images-overlay img {
+		width: 18em!important;
+		height: 18em;
+		margin-left: 25%;
+	}
+}
+
+
+@media screen and (min-width: 48em) and (max-width: 64em) and (orientation: portrait) {
+	.images-overlay img {
+		width: 48em;
+		height: 48em;
+	}
+}
+
+@media screen and (min-width: 48em) and (max-width: 64em) and (orientation: landscape) {
+	.images-overlay img {
+		width: 24em!important;
+		height: 24em;
+		margin-left: 25%;
+	}
+}
+
+
+@media screen and (min-width: 64em) and (max-width: 80em) and (orientation: portrait) {
+	.images-overlay img {
+		width: 64em;
+		height: 64em;
+	}
+}
+
+@media screen and (min-width: 64em) and (max-width: 80em) and (orientation: landscape) {
+	.images-overlay img {
+		width: 32em!important;
+		height: 32em;
+		margin-left: 25%;
+	}
+}
+
+
+@media screen and (min-width: 80em) and (orientation: portrait) {
+	.images-overlay img {
+		width: 80em;
+		height: 80em;
+	}
+}
+
+@media screen and (min-width: 80em) and (orientation: landscape) {
+	.images-overlay img {
+		width: 40em!important;
+		height: 40em;
+		margin-left: 25%;
+	}
+}
+
+
